[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Overlays/MenuStatsMonitor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scripts/UpgradeMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/ButtonUpgradeCoins.png" type="Texture" id=3]
[ext_resource path="res://Font.tres" type="BitmapFont" id=4]
[ext_resource path="res://Assets/Sprites/ButtonUpgradeBoost.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/ButtonUpgradeMagnet.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/ButtonUpgradeMultiplier.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/ButtonUpgradeTreasure.png" type="Texture" id=8]
[ext_resource path="res://Assets/Overlays/ReturnButton.tscn" type="PackedScene" id=9]

[node name="Node2D" type="Node2D"]

[node name="MenuStatsMonitor" parent="." instance=ExtResource( 1 )]

[node name="UpgradeMenu" type="Control" parent="."]
margin_top = -1.0
margin_right = 40.0
margin_bottom = 39.0
script = ExtResource( 2 )

[node name="ReturnButton" parent="UpgradeMenu" instance=ExtResource( 9 )]
margin_left = 2.0
margin_top = 73.0
margin_right = 18.0
margin_bottom = 89.0

[node name="UpgradeCoinsButton" type="TextureButton" parent="UpgradeMenu"]
margin_left = 1.0
margin_top = 2.0
margin_right = 49.0
margin_bottom = 18.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusBar" type="ColorRect" parent="UpgradeMenu/UpgradeCoinsButton"]
margin_left = 3.0
margin_top = 11.0
margin_right = 14.0
margin_bottom = 13.0
color = Color( 0.6, 0.898039, 0.313726, 1 )

[node name="PriceLabel" type="Label" parent="UpgradeMenu/UpgradeCoinsButton"]
margin_left = -0.0584412
margin_top = 15.8831
margin_right = 34.9416
margin_bottom = 24.8831
custom_fonts/font = ExtResource( 4 )
text = "00000"

[node name="UpgradeBoostButton" type="TextureButton" parent="UpgradeMenu"]
margin_left = 56.0
margin_top = 2.0
margin_right = 104.0
margin_bottom = 18.0
texture_normal = ExtResource( 5 )

[node name="StatusBar" type="ColorRect" parent="UpgradeMenu/UpgradeBoostButton"]
margin_left = 3.0
margin_top = 11.0
margin_right = 30.0
margin_bottom = 13.0
color = Color( 0.6, 0.898039, 0.313726, 1 )

[node name="PriceLabel" type="Label" parent="UpgradeMenu/UpgradeBoostButton"]
margin_left = 0.0849228
margin_top = 16.4967
margin_right = 35.0849
margin_bottom = 25.4967
custom_fonts/font = ExtResource( 4 )
text = "00000"

[node name="UpgradeMagnetButton" type="TextureButton" parent="UpgradeMenu"]
margin_left = 111.0
margin_top = 2.0
margin_right = 159.0
margin_bottom = 18.0
texture_normal = ExtResource( 6 )

[node name="StatusBar" type="ColorRect" parent="UpgradeMenu/UpgradeMagnetButton"]
margin_left = 3.0
margin_top = 11.0
margin_right = 30.0
margin_bottom = 13.0
color = Color( 0.6, 0.898039, 0.313726, 1 )

[node name="PriceLabel" type="Label" parent="UpgradeMenu/UpgradeMagnetButton"]
margin_left = -0.0778809
margin_top = 15.6564
margin_right = 34.9221
margin_bottom = 24.6564
custom_fonts/font = ExtResource( 4 )
text = "00000"

[node name="UpgradeMultiplierButton" type="TextureButton" parent="UpgradeMenu"]
margin_left = 1.0
margin_top = 35.0
margin_right = 49.0
margin_bottom = 51.0
texture_normal = ExtResource( 7 )

[node name="StatusBar" type="ColorRect" parent="UpgradeMenu/UpgradeMultiplierButton"]
margin_left = 3.0
margin_top = 11.0
margin_right = 30.0
margin_bottom = 13.0
color = Color( 0.6, 0.898039, 0.313726, 1 )

[node name="PriceLabel" type="Label" parent="UpgradeMenu/UpgradeMultiplierButton"]
margin_left = -0.0778809
margin_top = 15.6564
margin_right = 34.9221
margin_bottom = 24.6564
custom_fonts/font = ExtResource( 4 )
text = "00000"

[node name="UpgradeTreasureButton" type="TextureButton" parent="UpgradeMenu"]
margin_left = 56.0
margin_top = 35.0
margin_right = 104.0
margin_bottom = 51.0
texture_normal = ExtResource( 8 )

[node name="StatusBar" type="ColorRect" parent="UpgradeMenu/UpgradeTreasureButton"]
margin_left = 3.0
margin_top = 11.0
margin_right = 30.0
margin_bottom = 13.0
color = Color( 0.6, 0.898039, 0.313726, 1 )

[node name="PriceLabel" type="Label" parent="UpgradeMenu/UpgradeTreasureButton"]
margin_left = -0.0778809
margin_top = 15.6564
margin_right = 34.9221
margin_bottom = 24.6564
custom_fonts/font = ExtResource( 4 )
text = "00000"
[connection signal="pressed" from="UpgradeMenu/UpgradeCoinsButton" to="UpgradeMenu" method="_on_UpgradeCoinsButton_pressed"]
[connection signal="pressed" from="UpgradeMenu/UpgradeBoostButton" to="UpgradeMenu" method="_on_UpgradeBoostButton_pressed"]
[connection signal="pressed" from="UpgradeMenu/UpgradeMagnetButton" to="UpgradeMenu" method="_on_UpgradeMagnetButton_pressed"]
[connection signal="pressed" from="UpgradeMenu/UpgradeMultiplierButton" to="UpgradeMenu" method="_on_UpgradeMultiplierButton_pressed"]
[connection signal="pressed" from="UpgradeMenu/UpgradeTreasureButton" to="UpgradeMenu" method="_on_UpgradeTreasureButton_pressed"]
